Fixed alignment of last book

--- a/stylesheets/_books.scss
+++ b/stylesheets/_books.scss
@@ -12,6 +12,9 @@ ul.book-list {
       visibility: hidden;
     }
   }
+  li:last-child{
+    float: left !important;
+  }
 }
 
 .book {
